tests/react_16_9/react_16_9.exp
Error ------------------------------------------------------------------------------------------------- profiler.js:5:26

Cannot get `React.ProfilerOnRenderFnType` because property `ProfilerOnRenderFnType` is missing in module `react` [1].
[prop-missing]

   profiler.js:5:26
   5| const onRenderBad: React.ProfilerOnRenderFnType = ( // Error, the type isnt exported
                               ^^^^^^^^^^^^^^^^^^^^^^

References:
   profiler.js:3:13
   3| import * as React from 'react';
                  ^^^^^ [1]


Error ------------------------------------------------------------------------------------------------ profiler.js:17:13

Cannot create `React.Profiler` element because property `id` is missing in props [1] but exists in object type [2].
[prop-missing]

   profiler.js:17:13
    17| const _b = <React.Profiler />; // Error, id and onRender are required
                    ^^^^^^^^^^^^^^

References:
   profiler.js:17:12
    17| const _b = <React.Profiler />; // Error, id and onRender are required
                   ^^^^^^^^^^^^^^^^^^ [1]
   <BUILTINS>/react.js:403:56
                                                               v-
   403|   declare export var Profiler: React$AbstractComponent<{|
   404|     children?: React$Node,
   405|     id: string,
   406|     onRender: ProfilerOnRenderFnType,
   407|   |}, void>;
          -^ [2]


Error ------------------------------------------------------------------------------------------------ profiler.js:17:13

Cannot create `React.Profiler` element because property `onRender` is missing in props [1] but exists in object
type [2]. [prop-missing]

   profiler.js:17:13
    17| const _b = <React.Profiler />; // Error, id and onRender are required
                    ^^^^^^^^^^^^^^

References:
   profiler.js:17:12
    17| const _b = <React.Profiler />; // Error, id and onRender are required
                   ^^^^^^^^^^^^^^^^^^ [1]
   <BUILTINS>/react.js:403:56
                                                               v-
   403|   declare export var Profiler: React$AbstractComponent<{|
   404|     children?: React$Node,
   405|     id: string,
   406|     onRender: ProfilerOnRenderFnType,
   407|   |}, void>;
          -^ [2]



Found 3 errors
